--- a/style.css
+++ b/style.css
@@ -111,11 +111,12 @@ body {
     padding: 20px;
     font-size: 18px;
     background: #fcfcfc;
-    border: 2px solid #1A73E8;
+    border: 1px solid #1A73E8;
     -webkit-box-shadow: 10px 10px 50px 0px rgba(0,0,0,0.1);
     -moz-box-shadow: 10px 10px 50px 0px rgba(0,0,0,0.1);
     box-shadow: 10px 10px 50px 0px rgba(0,0,0,0.1);
     transition: all 150ms ease-in-out;
+    border-radius: 4px;
 }
 
 .form-input:focus {
@@ -180,7 +181,8 @@ body {
 }
 
 .form-btn:hover .fa-angle-right {
-    transform: rotate(90deg);
+    /* transform: rotate(90deg); */
+    transform: translateX(5px);
 }
 
 .form-btn:hover {
